Archive2/6a/0f0d4b2e90d808/output
main.cpp:19:11: error: '::main' must return 'int'
 void main()
           ^
main.cpp: In function 'int main()':
main.cpp:25:10: error: 'clrscr' was not declared in this scope
   clrscr();
          ^
main.cpp:30:13: error: 'delay' was not declared in this scope
    delay(100);
             ^
main.cpp:114:14: error: 'getch' was not declared in this scope
        getch();
              ^
main.cpp:126:22: warning: format '%c' expects argument of type 'char*', but argument 2 has type 'int' [-Wformat=]
        scanf("%c",ans);
                      ^
main.cpp:131:7: error: a function-definition is not allowed here before '{' token
       {
       ^
main.cpp:306:12: error: expected '}' at end of input
            } /*End of Code */
            ^
main.cpp:306:12: error: expected 'while' at end of input
main.cpp:306:12: error: expected '(' at end of input
main.cpp:306:12: error: expected primary-expression at end of input
main.cpp:306:12: error: expected ')' at end of input
main.cpp:306:12: error: expected ';' at end of input
main.cpp:306:12: error: expected '}' at end of input
bash: line 9: ./a.out: No such file or directory
